# truthscore-llm

./: .gitignore  README.md  fix_metadata.py  paper.bib  paper.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-pypi.yml
eval/: README.md  generate_dataset.py  run_claim_evaluation.py
eval/data/: questions_100.json
eval/epistemic_stress/: README.md  generate_dataset_120.py  run_epistemic_eval.py
eval/epistemic_stress/data/: prompts_120.json
examples/: example.py  production_example.py  wikipedia_example.py
experiments/: EXPERIMENT_DESIGN.md  MANUAL_EXPERIMENT.md  QUICKSTART.md  README.md  __init__.py  annotation.py  full_experiment_answers.json  inference_configs.py  manual_answers_template.json  prompts.py  run_experiment.py  run_manual_experiment.py  setup_api.py
experiments/results/: experiment_results.json  experiment_summary.json  manual_experiment_results.json  manual_experiment_summary.json
tests/: __init__.py  test_claim_truth.py  test_claim_verifier_negation.py  test_epistemic_stress_smoke.py  test_eval_smoke.py  test_production.py  test_score.py  test_use_cases.py
truthscore/: __init__.py  claim_consistency.py  claim_extractor.py  claim_verifier.py  config.py  consistency.py  coverage.py  default_corpus.py  io_corpus.py  linguistic_risk.py  nli.py  production.py  retrieve.py  score.py  types.py  wikipedia_retriever.py
